Fix .form-actions whitespace for non-wrapped forms

--- a/zaphod/themes/teal/static/css/common/forms.less
+++ b/zaphod/themes/teal/static/css/common/forms.less
@@ -16,7 +16,6 @@
         margin: -(@form-wrapped-padding + 15px);
         margin-top: 0;
         margin-bottom: -@form-wrapped-padding;
-        padding: @form-wrapped-padding;
     }
 
     legend {
@@ -28,6 +27,7 @@
 .form-actions {
     border-top: 1px solid darken(@gray-lighter, 12%);
     background-color: @gray-lighter;
+    padding: @form-wrapped-padding 0;
 }
 
 .form-group {
